--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,332 @@
+/* ========== COLORS =========== */
+/* YELLOW : #ffd86f */
+/* GREEN : #48d0b0; */
+/* RED : #fb6c6c */
+/* PURPLE : #6c79db */
+/* BLUE : #76bdfe; */
+
+body {
+  background: rgb(235, 218, 212);
+}
+
+
 .App {
   text-align: center;
+  display: flex;  
+  overflow: auto;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  color: rgba(44, 43, 43, 0.761);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ability-container {
+  display: inline-block;  
+  background: white;
+  width: 110px;
+  margin: 2px 5px;
+  border-radius: 20px 20px 20px 20px;
+  text-align: center;
+  text-transform: capitalize;  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.arrow-back {
+  position: absolute;
+  left: 40px;
+  top: 40px;
+  background: blanchedalmond;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.4rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn-search {
+  background-color: cadetblue;
+  margin: 0 30px 0 5px;  
+}
+
+.btn-danger {
+  margin: 0 20px;
+}
+
+.card-body {
+  display: flex;  
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.cards-container {
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;  
+  margin: auto;
+}
+
+.card-container {
+  background: #a69bca;
+  margin: 1rem;
+  margin-bottom: 50px;
+  width: 250px;
+  border-radius: 10% 10% 10% 10%;
+  color: rgb(26, 24, 24);
+  text-decoration: none;
+  transition: 0.2s;
+  height: 300px;
+}
+
+.card-container:hover {
+  background: #6d6685;
+  margin: 1rem; 
+  border-radius: 10%;
+  color: rgb(26, 24, 24);
+  text-decoration: none;
+  transform: rotate(3deg);
+  animation: shake .5s infinite;
+  animation-direction: alternate;
+  transition: 0.2s;
+
+}
+
+
+.card-head {
+  display: flex;
+  flex-direction: column;  
+  align-items: center;
+}
+
+.card-info {
+  text-align: left;
+  line-height: 6px;
+  font-size: 1.2rem;  
+}
+
+.card-types {
+  display: flex;
+  flex-direction: column;  
+}
+
+.col-3 {  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  display: flex;  
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  max-width: 40vw;
+  background: chartreuse;
+}
+
+.char-container {
+  height: 45%;
+ 
+}
+
+.config-btn {  
+  position: fixed;
+  right: 20px;
+  top: 80px;
+  padding: 8px;
+  border-radius: 10px;
+  border: 6px solid rgb(89, 85, 84);
+  cursor: pointer;  
+}
+
+.col-6 {
+  width: 50%;
+}
+
+.form-container {
+  margin-left: 20px;
+}
+
+.input {
+  border-radius: 5px;
+  padding: 4px;
+  margin: 0 40px 0 0;
+}
+
+.left-details-container {
+  display: flex;
+  justify-content: center;
+}
+
+.left-details-container>.d-flex {
+  margin: 10px 10px;
+}
+
+.left-details-container>.d-flex span {
+  font-size: 1rem;
+}
+
+
+
+.moves-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  background: chocolate;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  min-width: 100vw;
+  background:  #fb6c6c;
+}
+
+.pagination {
+  display: flex;
+}
+
+.pokemon-card-image {
+  width: 140px;
+  height: 140px;  
+}
+
+.pokemon-card-image-container {  
+  position: relative;
+  right: 0;
+  top: -50px; 
+}
+
+.pokemon-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
+  height: 100%;
+  width: 100%;      
+  background: #e6d8d8;
+}
+
+.pokemon-chars {
+  background: #a69bca;
+  width:  600px;
+  height: 90%;
+ 
+}
+
+.pokemon-detail {
+  flex-direction: row;
+}
+
+.pokemon-img {
+  width: 200px;
+  height: 200px;
+  
+}
+
+.pokemon-title-1 {
+  font-size: 3.2rem;
+  
+}
+
+.pokemon-title-2 {  
+  font-size: 1.4rem;   
+  margin-top: -60px;
+  color: rgb(26, 24, 24);
+  text-decoration: underline;
+}
+
+.pokemon-nav {
+  display: flex;    
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width:  600px;
+  border-radius: 10px 10px 0 0;
+  background: rgba(0, 0, 0, 0.2);
+  margin-top: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.pokemon-nav-li  {
+  display: flex;    
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  margin: 10px 20px;  
+  color: rgb(26, 24, 24);
+  font-size: 1.3rem;  
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
+.pokemon-nav-li:hover {
+  transform: scale(0.9); 
+  color: rgb(26, 24, 24); 
+}
+
+
+.pokedex {
+  min-height: 100vh;
+  
+}
+
+.pokedex-id {
+  margin-top: 40px;
+  font-size: 1.2rem;
+}
+
+.pokemon-logo {
+  width: 300px;
+  margin: 15px 0 40px 0;
+}
+
+
+.type-container {
+  display: inline-block;  
+  background: white;
+  width: 70px;
+  margin: 5px 0;
+  border-radius: 20px 20px 20px 20px;
+  text-align: center;
+  text-transform: capitalize;  
+}
+
+.move-container {
+  display: inline-block;  
+  background: white;
+  width: 25%;
+  margin: 5px 0;
+  border-radius: 20px 20px 20px 20px;
+  text-align: center;
+  text-transform: capitalize; 
+}
+
+.loader {
+  width: 70px;
+  animation: rotation 2s infinite linear;  
+}
+
+@keyframes rotation {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(359deg);
   }
 }
+
+.login-container {
+  margin: auto;
+}
+
+.d-flex {
+  display: flex;
+}
+
