--- a/src/asserts/querys.css
+++ b/src/asserts/querys.css
@@ -53,20 +53,67 @@
 
  }
 
- @media (max-width: 450px) {
+ @media (max-width: 550px) {
+
+     
+    .card-info {
+        text-align: left;
+        line-height: 4px;
+        font-size: 1rem;         
+      }
+
+      .card-body {
+          flex-direction: column;
+      }
+
+      .char-container {
+        height: 100%; 
+      }
+      
+
+     
      .move-container {
          width: 40%;
      }
 
+     .pokemon-card-image {
+        height: 110px;
+        width: 110px;      
+        
+    }
+
      .pokemon-char {
         flex-direction: column;
+      }     
+
+      .pokemon-title-2 {
+        font-size: 1.3rem;
+        
+      }
+
+      .pokedex-id {
+          position: relative;
+          top: 120px;
+          left: 20px;
       }
 
      .pokemon-nav-li {
          margin: 10px 0;
      }
 
-     
+     .left-details-container {
+         flex-direction: column;
+         align-items: center;
+         
+     }
+
+     .right-details-container {
+        font-size: 1.1rem;    
+        align-items: flex-start;
+        height: 100%;    
+    
+    }
+
 
     
  }
