--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
   color: rgba(44, 43, 43, 0.761);
+  overflow: hidden;
 }
 
 .ability-container {
@@ -45,6 +44,8 @@
 }
 .button-form {
   margin-right: 40px;
+  border-radius: 7px;
+  border: 1px solid gray;
 }
 
 
@@ -101,8 +102,8 @@
   color: rgb(26, 24, 24);
   text-decoration: none;
   transform: scale(1.03);
-  animation: shake .5s infinite;
-  animation-direction: alternate;
+  /* animation: shake .5s infinite; */
+  /* animation-direction: alternate; */
   transition: 0.2s;
   box-shadow: -7px 7px 5px 0px rgba(13, 13, 13, 0.304);
 
@@ -192,15 +193,17 @@
 }
 
 .input {
-  border-radius: 5px;
-  padding: 4px;
+  border-radius: 7px;
+  padding: 5px;
   margin: 0 10px 0 0;
+  outline: none;
+  border: 1px solid gray;
+  
 }
 
 .input-container {
   border: 1px solid rgba(219, 210, 210, 0.297);
   padding: 50px;
-  border-radius: 10px;
   background: rgb(225, 143, 143);
   box-shadow: -7px 7px 5px 0px rgba(13, 13, 13, 0.304);
   display: flex;
@@ -213,6 +216,8 @@
   margin-bottom: 10px;
   border-radius: 5px;
   padding: 5px;
+  outline: none;
+
 }
 
 .left-details-container {
@@ -247,7 +252,7 @@
 
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   min-width: 100vw;
   background:  #fb6c6c;
   flex-wrap: nowrap;
@@ -281,7 +286,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100%;
+  height: 100vh;
   width: 100%;      
   
 }
@@ -341,10 +346,10 @@
   color: rgb(26, 24, 24); 
 }
 .pokedex {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  min-height: 100vh;
 }
 
 .pokedex-id {
@@ -363,6 +368,12 @@
   width: 300px;
   margin: 20px 0 40px 0;
   
+}
+
+.select {
+  border-radius: 7px;
+  outline: none;
+  border: 1px solid gray;
 }
 
 .select-numbers-pokemons {
